<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:weightSum="19"
              android:layout_height="match_parent">
    <!-- for previewing -->
    <ImageView
            android:id="@+id/imgv_color_picker_dialog_preview_color"
            android:layout_margin="@dimen/dim_general_margin"
            android:src="@android:color/transparent"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp" />

    <!-- pick red -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="@dimen/dim_general_margin"
            android:layout_marginEnd="@dimen/dim_general_margin"
            android:layout_marginBottom="@dimen/dim_general_margin"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="0dp">
        <TextView
                android:text="@string/str_red"
                android:textColor="@color/color_red"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        <SeekBar
                android:id="@+id/skb_color_picker_dialog_pick_red"
                android:maxHeight="@dimen/dim_color_picker_dialog_seek_bar_max_height"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
        <Button
                android:id="@+id/btn_color_picker_dialog_show_red_value"
                android:text="000"
                android:textStyle="bold"
                android:textColor="@color/color_red"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/dim_color_picker_dialog_value_showing_btn_padding"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- pick green -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="@dimen/dim_general_margin"
            android:layout_marginEnd="@dimen/dim_general_margin"
            android:layout_marginBottom="@dimen/dim_general_margin"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="0dp">
        <TextView
                android:text="@string/str_green"
                android:textColor="@color/color_green"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        <SeekBar
                android:id="@+id/skb_color_picker_dialog_pick_green"
                android:maxHeight="@dimen/dim_color_picker_dialog_seek_bar_max_height"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
        <Button
                android:id="@+id/btn_color_picker_dialog_show_green_value"
                android:text="000"
                android:textStyle="bold"
                android:textColor="@color/color_green"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/dim_color_picker_dialog_value_showing_btn_padding"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- pick blue -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="@dimen/dim_general_margin"
            android:layout_marginEnd="@dimen/dim_general_margin"
            android:layout_marginBottom="@dimen/dim_general_margin"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="0dp">
        <TextView
                android:text="@string/str_blue"
                android:textColor="@color/color_blue"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        <SeekBar
                android:id="@+id/skb_color_picker_dialog_pick_blue"
                android:maxHeight="@dimen/dim_color_picker_dialog_seek_bar_max_height"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
        <Button
                android:id="@+id/btn_color_picker_dialog_show_blue_value"
                android:text="000"
                android:textStyle="bold"
                android:textColor="@color/color_blue"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/dim_color_picker_dialog_value_showing_btn_padding"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- pick alpha -->
    <LinearLayout
            android:id="@+id/lly_pick_alpha"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="@dimen/dim_general_margin"
            android:layout_marginEnd="@dimen/dim_general_margin"
            android:layout_marginBottom="@dimen/dim_general_margin"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="0dp">
        <TextView
                android:text="@string/str_alpha"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        <SeekBar
                android:id="@+id/skb_color_picker_dialog_pick_alpha"
                android:maxHeight="@dimen/dim_color_picker_dialog_seek_bar_max_height"
                android:layout_gravity="center"
                android:layout_width="180dp"
                android:layout_height="wrap_content" />
        <Button
                android:id="@+id/btn_color_picker_dialog_show_alpha_value"
                android:text="255"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:background="?android:attr/selectableItemBackground"
                android:padding="@dimen/dim_color_picker_dialog_value_showing_btn_padding"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- or using hex code -->
    <Button
            android:id="@+id/btn_color_picker_dialog_or_using_hex_code"
            android:text="or using hex code"
            android:textColor="@android:color/white"
            android:background="@drawable/drawable_color_picker_dialog_using_hex_code_button"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="@dimen/dim_general_margin"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="0dp" />

    <!-- cancel & select buttons -->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/dim_general_margin"
            android:layout_marginEnd="@dimen/dim_general_margin"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="0dp">
        <!-- cancel button -->
        <Button
                android:id="@+id/btn_color_picker_dialog_cancel"
                android:text="@string/str_cancel"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:background="@drawable/drawable_color_picker_dialog_button"
                android:layout_marginEnd="@dimen/dim_color_picker_dialog_button_bar_margin"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp" />
        <!-- select button -->
        <Button
                android:id="@+id/btn_color_picker_dialog_select"
                android:text="@string/str_select"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:background="@drawable/drawable_color_picker_dialog_button"
                android:layout_marginStart="@dimen/dim_color_picker_dialog_button_bar_margin"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="30dp" />
    </LinearLayout>
</LinearLayout>